bereit das alte projekt zu löschen ich glaube

--- a/bfxr2_simple/css/slider.css
+++ b/bfxr2_simple/css/slider.css
@@ -34,7 +34,7 @@
 }
 
 
-.slider.slider.slider-horizontal {
+.slider.slider-horizontal {
     margin-left: 1.5px;
     margin-right: 1.5px;
     position: relative;
