--- a/css/index.css
+++ b/css/index.css
@@ -309,11 +309,16 @@ body {
     padding:0;
     margin:0;
 
-    height:20px;
+    width:15px;
+    height:15px;
 
     text-align: center;
 }
 
+.delete_button img {
+    width:10px;
+    height:10px;
+}
 table.paramtable {
     width:100%;    
     border-collapse: collapse;
