--- a/css/slider.css
+++ b/css/slider.css
@@ -50,6 +50,18 @@
     box-shadow: none;
 }
 
+.slider.slider-disabled {
+    opacity: 0.3;
+}
+.slider.slider-disabled .slider-track {
+    background-color: transparent;
+    background-image: none;
+}
+
+.slider.slider-disabled .slider-tick {
+    cursor: not-allowed;
+}
+
 .slider-handle.round {}
 
 .slider.slider-horizontal .slider-handle {
@@ -300,9 +312,4 @@ button:hover > .data-tooltip{
 
 .slidernarrow{
     padding-left:2px;
-}
-
-img {
-    /*pixelated*/
-    image-rendering: pixelated;
 }
