--- a/css/index.css
+++ b/css/index.css
@@ -52,6 +52,8 @@
 
 body {
     user-select: none;
+    width:100%;
+    height:100%;
     margin:0;
     padding:0;
     background-color: var(--page-background-color);
@@ -757,4 +759,26 @@ button:active {
 img {
     /*pixelated*/
     image-rendering: pixelated;
+}
+
+.dropzone {
+	box-sizing: border-box;
+	position: fixed;
+    z-index: 99999;
+    width: 20em;
+    height: 20em;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+	background-color: var(--panel-background-color);
+	border: 5px dashed var(--panel-border-color);
+    border-radius: 10px;
+    opacity: 0.8;
+    /*center text vertically and horizontally*/
+    display: none;/*flex to make visible*/
+    align-items: center;
+    justify-content: center;
+    font-size: var(--font-size-bigger);
+    /*mouse passthrough*/
+    pointer-events: none;
 }
